#18421 closed bug (fixed)

Installer hangs when copying files to SSD

Reported by: jjido Owned by: nobody
Priority: normal Milestone: R1/beta5
Component: Drivers Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by jjido)

I am trying to install haiku on a Thinkpad x200s.

If I use an old image (hrev51659) the files copy fine and the install completes ok, but anything recent (I tried beta 4 and latest nightly and few more) is not able to copy.

The installer shows it’s copying bash hpkg and then hangs. Other applications cannot start either. The installer stop button doesn’t stop properly.

I have to force the computer off.

Running top during the install doesn’t show anything taking CPU, in fact Installer Copy Engine briefly takes the top spot but it goes down quickly. When I mount the target disk I can see a zero bytes bash hpkg in the packages folder.

The SSD occupies the internal drive slot (SATA). The install image is on a SD card in the SD slot.

I will attach screenshots/logs later.

Attachments (19)

screenshot1.png (105.0 KB ) - added by jjido 21 months ago.
Installer start screen
syslog (483.7 KB ) - added by jjido 21 months ago.
System log
es1370.log (109 bytes ) - added by jjido 21 months ago.
IMG_2678.jpeg (4.9 MB ) - added by jjido 21 months ago.
Hung installer - mouse works but nothing opens
syslog.2 (232.7 KB ) - added by jjido 21 months ago.
New syslog (external disk)
IMG_2679.jpeg (100.7 KB ) - added by jjido 21 months ago.
Timeout error
IMG_2680.jpeg (70.8 KB ) - added by jjido 21 months ago.
Open terminal hung
IMG_2681.jpeg (456.9 KB ) - added by jjido 21 months ago.
Kernel debug output- r1b4
IMG_2682.jpeg (434.0 KB ) - added by jjido 21 months ago.
Syslog with internal SSD and r1b4
IMG_2687.jpeg (542.4 KB ) - added by jjido 21 months ago.
Waiting thread list
IMG_2690.jpeg (496.9 KB ) - added by jjido 21 months ago.
Mutex and thread dumps
IMG_2689.jpeg (137.2 KB ) - added by jjido 21 months ago.
Installer threads
IMG_2698.jpeg (580.0 KB ) - added by jjido 21 months ago.
Threads waiting on mutex
IMG_2699.jpeg (421.2 KB ) - added by jjido 21 months ago.
Mutex and thread dump of the owner
IMG_2700.jpeg (107.7 KB ) - added by jjido 21 months ago.
Installer threads
IMG_2704.jpeg (471.5 KB ) - added by jjido 21 months ago.
Mutex and two stack traces
IMG_2705.jpeg (113.1 KB ) - added by jjido 21 months ago.
Installer thread after exiting it
installed-files.txt (27.8 KB ) - added by jjido 21 months ago.
Files copied by the installer to target before the hang
IMG_2770.jpeg (155.2 KB ) - added by jjido 20 months ago.
Hang at boot syslog

Change History (47)

comment:1 by jjido, 21 months ago

Description: modified (diff)

by jjido, 21 months ago

Attachment: screenshot1.png added

Installer start screen

by jjido, 21 months ago

Attachment: syslog added

System log

by jjido, 21 months ago

Attachment: es1370.log added

by jjido, 21 months ago

Attachment: IMG_2678.jpeg added

Hung installer - mouse works but nothing opens

by jjido, 21 months ago

Attachment: syslog.2 added

New syslog (external disk)

comment:2 by jjido, 21 months ago

I tried putting the SSD in an external USB enclosure. The installer hung at the same place, however it displayed an error message about a timeout. Also with external the Ctl-Alt-Del combination still works which was not the case before.

comment:3 by waddlesplash, 21 months ago

Keywords: Freeze hang lock copy install removed
Platform: x86-64All
Version: R1/beta4R1/Development

I don't see any errors in the syslog, and you haven't attached anything with a visible error message elsewhere.

It also appears you are testing with hrev55635 which is before even beta4. You say that beta4 doesn't work, but what happens, exactly? Please try using it, and copy a syslog from it after the error occurs.

comment:4 by jjido, 21 months ago

All recent versions behave the same. I wanted to upload the log from hrev57004 but I am not able to use the upload button in that version. I will try to upload from beta4 if that helps.

Attaching pictures of screen with external disk. That’s all I have, sorry. Don’t know how to produce an error it just hangs the system.

by jjido, 21 months ago

Attachment: IMG_2679.jpeg added

Timeout error

by jjido, 21 months ago

Attachment: IMG_2680.jpeg added

Open terminal hung

comment:5 by waddlesplash, 21 months ago

Please drop to KDL via Alt+SysRq+D, type syslog | tail 50, and take a picture.

comment:6 by jjido, 21 months ago

Thanks for the guidance, the picture shows the output for haiku r1beta4 64 bit.

by jjido, 21 months ago

Attachment: IMG_2681.jpeg added

Kernel debug output- r1b4

comment:7 by jjido, 21 months ago

Description: modified (diff)

comment:8 by jjido, 21 months ago

When using the SSD internally, the syslog doesn’t really show what it is hung on.

Still on hrev1 beta 4.

by jjido, 21 months ago

Attachment: IMG_2682.jpeg added

Syslog with internal SSD and r1b4

comment:9 by jjido, 21 months ago

I also captured thread dumps (same session as above).

comment:10 by waddlesplash, 21 months ago

Component: Applications/InstallerDrivers

The error is a USB disk timeout. I don't see any USB errors, so it's entirely possible that the driver in question simply failed to respond. Since it doesn't work when installed via SATA either, that seems possible.

Could you drop to KDL and run the same syslog command with the drive installed internally?

comment:11 by jjido, 21 months ago

Waddlesplash, see comment #8 and attachments - that’s with internal SSD on SATA.

comment:12 by waddlesplash, 21 months ago

There are probably more than 15 threads. You will need to find what one owns the usb_disk mutex and what it's presently doing. Using the "threads" command will list the mutex pointer, you can then use the "mutex" command to find out what thread holds it.

comment:13 by jjido, 21 months ago

I see, thank you. There are three threads waiting on the mutex: page writer, media checker and bfs log flusher.

But I don’t see an owner thread. The count is -4.

by jjido, 21 months ago

Attachment: IMG_2687.jpeg added

Waiting thread list

by jjido, 21 months ago

Attachment: IMG_2690.jpeg added

Mutex and thread dumps

by jjido, 21 months ago

Attachment: IMG_2689.jpeg added

Installer threads

comment:14 by jjido, 21 months ago

I tried using a partition formatted without query support, but the installer still hangs with the same three waiting threads.

comment:15 by waddlesplash, 21 months ago

There is no owning thread listed because you are on beta4 which has those debug features not compiled in. You need to use a nightly to get that information.

comment:16 by jjido, 21 months ago

It is copy_engine who owns the mutex. Tested with hrev57019.

by jjido, 21 months ago

Attachment: IMG_2698.jpeg added

Threads waiting on mutex

by jjido, 21 months ago

Attachment: IMG_2699.jpeg added

Mutex and thread dump of the owner

by jjido, 21 months ago

Attachment: IMG_2700.jpeg added

Installer threads

comment:17 by waddlesplash, 21 months ago

Please retest after hrev57037.

comment:18 by jjido, 21 months ago

Same issue with hrev57038, copy_engine holds the mutex.

by jjido, 21 months ago

Attachment: IMG_2704.jpeg added

Mutex and two stack traces

comment:19 by jjido, 21 months ago

With latest fixes I am able to exit the installer but it still has a couple of threads hanging about, which are blocking others.

by jjido, 21 months ago

Attachment: IMG_2705.jpeg added

Installer thread after exiting it

by jjido, 21 months ago

Attachment: installed-files.txt added

Files copied by the installer to target before the hang

comment:20 by jjido, 21 months ago

Note: as you can see in the last attachment, the installer manages to copy many files before the hang. The issue is with HPKG files.

Terminal can copy them fine but Tracker hangs too.

comment:21 by waddlesplash, 20 months ago

Please retest after hrev57048.

comment:22 by jjido, 20 months ago

Unable to boot on this hardware with hrev57051. The computer hangs during the startup sequence, even with all Safe Boot options enabled. Attaching output.

by jjido, 20 months ago

Attachment: IMG_2770.jpeg added

Hang at boot syslog

comment:23 by waddlesplash, 20 months ago

It appears something has deadlocked, likely in the UHCI driver. Can you drop to KDL via Alt+SysRq+D and try to figure out what?

comment:24 by jjido, 20 months ago

Sorry, the key combination does not seem to work during boot.

comment:25 by jjido, 20 months ago

The UHCI issue started between hrev57038 (boots OK) and hrev57046 (does not start up all the way).

comment:26 by waddlesplash, 20 months ago

Please retest after hrev57061.

comment:27 by jjido, 20 months ago

Hello, I am writing this from a fresh install of Haiku (hrev57061).

The latest fix is working!!

(just wish the installer would take care of making the disk partition active and configuring the boot menu.)

comment:28 by waddlesplash, 20 months ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

Excellent!

I think there is a menu to do that in Installer somewhere, towards the end.

Note: See TracTickets for help on using tickets.